# motis

.github/workflows/: unix.yml  windows.yml
base/launcher/: CMakeLists.txt
modules/cc/: CMakeLists.txt
modules/csa/: CMakeLists.txt
modules/csa/include/motis/csa/: csa.h  csa_alternative_search.h  csa_journey.h  csa_reconstruction.h  pretrip.h  pretrip_alternative.h
modules/csa/include/motis/csa/cpu/: csa_alternative_base_search.h  csa_alternative_profile_search_default_cpu.h  csa_alternative_search_default_cpu.h  csa_profile_search_default_cpu.h  csa_search_default_cpu.h
modules/csa/src/: csa.cc  run_csa_search.cc
modules/intermodal/: CMakeLists.txt
modules/routing/: CMakeLists.txt
modules/tripbased/include/motis/tripbased/: tb_journey.h  tb_profile_search.h  tb_search_common.h
